# spark-core-api

./: LICENSE  build.gradle.kts  gradle.properties
jvm/: build.gradle.kts  gradle.properties  settings.gradle.kts
jvm/gradle/wrapper/: gradle-wrapper.properties
jvm/src/main/java/cn/solarmoon/sparkcore/api/ffi/: slice_ref_uint8.java  slice_ref_uint8_t.java  spark_core.h  spark_core_h$shared.java  spark_core_h.java
jvm/src/main/kotlin/cn/solarmoon/sparkcore/api/: GeoEngine.kt  NativeLoader.kt
jvm/src/test/kotlin/: Test.kt
rust/: Cargo.toml
rust/crates/spark-core-geometry/: Cargo.toml
rust/crates/spark-core-geometry-bedrock/: Cargo.toml
rust/crates/spark-core-geometry-bedrock/src/: lib.rs
rust/crates/spark-core-geometry-bedrock/src/animation/: animation.rs  animation_file.rs  bone_animation.rs  keyframe.rs  lerp_mode.rs  loop_mode.rs  mod.rs
rust/crates/spark-core-geometry-bedrock/src/model/: bone.rs  cube.rs  locator.rs  mod.rs  model.rs  model_description.rs  uv.rs
rust/crates/spark-core-geometry-bedrock/tests/: test.rs
rust/crates/spark-core-geometry-ffi/: Cargo.toml
rust/crates/spark-core-geometry-ffi/src/: lib.rs
rust/crates/spark-core-geometry/benches/: benchmark.rs
rust/crates/spark-core-geometry/benches/animation/: baby_water_buffalo.json
rust/crates/spark-core-geometry/benches/model/: baby_water_buffalo.json
rust/crates/spark-core-geometry/src/: lib.rs  serde.rs
rust/crates/spark-core-geometry/src/animation/: animation.rs  animation_file.rs  bedrock.rs  bone_animation.rs  keyframe_track.rs  lerp_mode.rs  loop_mode.rs  mod.rs
rust/crates/spark-core-geometry/src/model/: bedrock.rs  bone.rs  cube.rs  error.rs  geometry_file.rs  locator.rs  mod.rs  model.rs  model_description.rs  uv.rs  vertex.rs
rust/crates/spark-core-geometry/tests/: test_run.rs
rust/crates/splines/: Cargo.toml
rust/crates/splines/src/: spline.rs
src/main/kotlin/cn/solarmoon/sparkcore/api/: SparkCoreApi.kt
src/main/kotlin/cn/solarmoon/sparkcore/api/extensionpack/: ExtensionPack.kt  ExtensionPackLoader.kt  ExtensionPackMetaInfo.kt  ExtensionPackReader.kt  Readable.kt
src/main/kotlin/cn/solarmoon/sparkcore/api/js/: Util.kt
src/main/kotlin/cn/solarmoon/sparkcore/api/math/: Float2.kt  Float3.kt  Float4.kt  Int3.kt  Mat4f.kt  Quaternionf.kt  formula.kt
src/main/kotlin/cn/solarmoon/sparkcore/api/skill/: SkillSystem.kt
src/main/kotlin/cn/solarmoon/sparkcore/api/util/: Direction.kt  Identifier.kt
src/test/kotlin/: Test.kt
(+26 files in other folders)
