[workspace]
members = [
    "crates/*",
]
resolver = "2"

[workspace.dependencies]
# core
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.21"
serde_json = "1.0"
splines = { path = "crates/splines", features = ["glam"] }
glam = "0.33"
safer-ffi = "0.2.0-rc1"

# base tools
enum-map = "3.0.0-beta.2"
smart-default = "0.7"
indexmap = "2.14"
thiserror = "2.0"

# test
criterion = "0.8"

# project
spark-core-geometry = { path = "crates/spark-core-geometry" }
spark-core-geometry-bedrock = { path = "crates/spark-core-geometry-bedrock" }
